[gd_scene load_steps=22 format=2]

[ext_resource path="res://Script/StackedShapeShape.gd" type="Script" id=1]
[ext_resource path="res://Script/StackedShape.gd" type="Script" id=2]
[ext_resource path="res://Script/ColorfulMeshInstance.gd" type="Script" id=4]
[ext_resource path="res://Asset/Font/Montserrat-Bold.ttf" type="DynamicFontData" id=5]
[ext_resource path="res://Shader/fake_ao.gdshader" type="Shader" id=6]
[ext_resource path="res://Shader/StackedShapeShadowPass.gdshader" type="Shader" id=7]
[ext_resource path="res://Shader/ShapeEffect.gdshader" type="Shader" id=8]
[ext_resource path="res://Shader/ShapeEffect2.gdshader" type="Shader" id=9]
[ext_resource path="res://Shader/ShapeOutlinepass.tres" type="Shader" id=10]

[sub_resource type="CubeMesh" id=11]
resource_local_to_scene = true

[sub_resource type="Shader" id=17]
code = "shader_type spatial;
render_mode unshaded;
uniform vec4 color = vec4(0.5, 0.5, 0.5, 0.0);
uniform vec3 wobble = vec3(0,0,0);
uniform float squish = 0.0;
uniform float fade = 0.0;

const vec3 def_norm = vec3(0.0,1.0,0.0);
const vec3 static_offset = vec3(0.25, 0.25, 0.30)/2.0; //= def_norm.y * + (def_norm.z - def_norm.x/3.0) * vec3(0.10, 0.05, 0.05) + def_norm.x * vec3(-0.01, 0.03, -0.02);

uniform vec4 base_color = vec4(0.5,0.5,0.5,0);
uniform vec4 top_color  = vec4(0.5,0.5,0.5,0);

float saturation(vec3 c) {
	float avg = (c.r+c.g+c.b)/3.0;
	return abs(avg-c.r) + abs(avg-c.g) + abs(avg-c.b);
}

void vertex() {
	// CUSTOM
	if (VERTEX.y == 0.0) NORMAL.y -= 1.0; //Gradient
	// Wobble anim
	VERTEX.y += (wobble * VERTEX).x + (wobble * VERTEX).z;
	VERTEX.y -= squish;
	if (VERTEX.y < 0.0) {
		VERTEX.y = 0.0;
		NORMAL = def_norm;
	}


	// DEFAULT
	COLOR.rgb = NORMAL.y * vec3(0.25, 0.25, 0.30)/2.0 + (NORMAL.z - NORMAL.x/3.0) * vec3(0.10, 0.05, 0.05) + NORMAL.x * vec3(-0.01, 0.03, -0.02) - static_offset;
	COLOR.a = (COLOR.r+COLOR.g+COLOR.b)/3.0;
	COLOR.rgb = mix(vec3(COLOR.a), COLOR.rgb, saturation(COLOR.rgb));
}


void fragment() {
	vec3 surf = mix(base_color.rgb, top_color.rgb, pow(SCREEN_UV.y,2));
	ALBEDO = mix(color.rgb+static_offset, surf, fade) + COLOR.rgb;
}

"

[sub_resource type="ShaderMaterial" id=20]
resource_local_to_scene = true
shader = SubResource( 17 )
shader_param/color = Plane( 0.5, 0.5, 0.5, 0 )
shader_param/wobble = Vector3( 0, 0, 0 )
shader_param/squish = 0.0
shader_param/fade = 0.0
shader_param/base_color = Plane( 0.5, 0.5, 0.5, 0 )
shader_param/top_color = Plane( 0.5, 0.5, 0.5, 0 )

[sub_resource type="ShaderMaterial" id=14]
resource_local_to_scene = true
render_priority = -2
shader = ExtResource( 7 )
shader_param/inner = 1.0
shader_param/outer = 1.05
shader_param/amount = 0.1
shader_param/wobble = Vector3( 0, 0, 0 )
shader_param/squish = 0.0
shader_param/fade = 1.0
shader_param/base_color = Plane( 10, 10, 10, 10 )
shader_param/top_color = Plane( 10, 10, 10, 10 )

[sub_resource type="CubeMesh" id=24]
resource_local_to_scene = true

[sub_resource type="ShaderMaterial" id=25]
resource_local_to_scene = true
shader = ExtResource( 10 )
shader_param/wobble = Vector3( 0, 0, 0 )
shader_param/squish = 0.0

[sub_resource type="PlaneMesh" id=7]

[sub_resource type="ShaderMaterial" id=22]
resource_local_to_scene = true
shader = ExtResource( 6 )
shader_param/inner = 1.0
shader_param/outer = 2.0
shader_param/amount = 1.0

[sub_resource type="ShaderMaterial" id=23]
render_priority = 25
shader = ExtResource( 9 )
shader_param/color = Plane( 1, 1, 1, 0 )
shader_param/alpha = 1.0
shader_param/grow = 0.0

[sub_resource type="ShaderMaterial" id=8]
resource_local_to_scene = true
render_priority = 25
next_pass = SubResource( 23 )
shader = ExtResource( 8 )
shader_param/inner = 1.0
shader_param/outer = 1.0
shader_param/color = Plane( 1, 1, 1, 0 )

[sub_resource type="DynamicFont" id=9]
size = 175
font_data = ExtResource( 5 )

[sub_resource type="BoxShape" id=6]
extents = Vector3( 2, 0.5, 2 )

[node name="StackedShape" type="RigidBody"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 3.07804, 0 )
can_sleep = false
script = ExtResource( 2 )

[node name="Shape" type="MeshInstance" parent="."]
generate_lightmap = false
mesh = SubResource( 11 )
material/0 = SubResource( 20 )
script = ExtResource( 1 )

[node name="ShadowShape" type="MeshInstance" parent="Shape"]
mesh = SubResource( 11 )
skeleton = NodePath("../..")
material/0 = SubResource( 14 )
script = ExtResource( 4 )

[node name="OutlineShape" type="MeshInstance" parent="Shape"]
mesh = SubResource( 24 )
skeleton = NodePath("../..")
material/0 = SubResource( 25 )

[node name="AoShape" type="MeshInstance" parent="Shape"]
mesh = SubResource( 7 )
skeleton = NodePath("../..")
material/0 = SubResource( 22 )
script = ExtResource( 4 )

[node name="EffectShape" type="MeshInstance" parent="Shape"]
visible = false
mesh = SubResource( 7 )
skeleton = NodePath("../..")
material/0 = SubResource( 8 )

[node name="Label3D" type="Label3D" parent="Shape/EffectShape"]
transform = Transform( -0.25, -2.18557e-08, -9.55343e-16, 0, -1.09278e-08, 0.25, -2.18557e-08, 0.25, 1.09278e-08, 5.96046e-08, 0.0547233, -0.995608 )
cast_shadow = 0
render_priority = 100
text = "PERFECT FIT"
font = SubResource( 9 )

[node name="CollisionShape" type="CollisionShape" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.5, 0 )
shape = SubResource( 6 )
